Fixes span spacing

--- a/media/css/churchdirectory.css
+++ b/media/css/churchdirectory.css
@@ -1,73 +1,90 @@
 #churchdirectory {
-    margin:10px 0;
+    margin: 10px 0;
 }
+
 address {
-    font-style:normal;
-    margin:10px 0;
+    font-style: normal;
+    margin: 10px 0;
 }
+
 #contact-name {
     font-size: 100%;
     font-weight: bold;
     padding-bottom: 5px;
     margin-bottom: 5px;
 }
+
 #contact-position {
     font-size: 95%;
     font-style: italic;
 }
+
 #contact-image {
 
 }
+
 .aright {
     float: right;
     margin-right: 25%;
 }
+
 .aleft {
     float: left;
     padding: 5px 25px 25px 0;
 }
+
 #churchdirectory #contact-address p {
     margin-left: 5px;
 }
+
 #churchdirectory p {
-    line-height:1em;
+    line-height: 1em;
     margin: 3px 0 3px 0;
     padding: 0;
 }
+
 #emailForm {
     margin-top: 15px;
 }
+
 .contact-other {
     margin-bottom: 3px;
 }
+
 #churchdirectory label {
-    display:block;
+    display: block;
 }
+
 #churchdirectory label.chkbox {
-    display:inline;
+    display: inline;
 }
+
 #churchdirectory input.chkbox {
-    display:inline;
+    display: inline;
     margin-bottom: 0;
 }
+
 #churchdirectory label.required {
-    color:#ff0000;
+    color: #ff0000;
 }
+
 #churchdirectory select {
     display: block;
 }
 
 span.marker {
-    margin:0 10px 0 0;
+    margin: 0 10px 0 0;
 }
 
 div.marker {
-    float:left;
+    float: left;
     padding-top: 1px;
 }
+
 .wtext {
-    width:85px;
+    width: 85px;
 }
+
 .wicon {
     width: 25px;
 }
@@ -76,18 +93,20 @@ div.marker {
     /*display: block;*/
     margin-bottom: 6px;
 }
+
 #churchdirectory input.radio {
     display: inline;
     margin-bottom: 0;
 }
+
 #churchdirectory .contact-button {
     display: block;
     margin-top: 10px;
 }
 
 label.textarea {
-    margin:7px 0;
-    display:block;
+    margin: 7px 0;
+    display: block;
 }
 
 #churchdirectory-error {
@@ -102,49 +121,62 @@ label.textarea {
 #captcha-img {
     margin-top: 6px;
 }
+
 div.separator {
     margin-bottom: 6px;
 }
+
 #churchdirectory-confirm  .linkback {
     display: block;
     margin-top: 15px;
 }
+
 .directory {
 
 }
+
 .directory-title {
     font-size: 10pt;
     font-weight: bold;
 }
+
 .directory-img {
     width: 100px;
-    margin-right:6px;
+    margin-right: 6px;
     margin-left: 6px;
     margin-bottom: 20px;
     float: left;
 }
+
 #directory-items {
     float: left;
     width: 46%;
 }
+
 p {
     font-weight: normal;
 }
+
 .jicons-text {
     font-weight: bold;
 }
-.churchdirectory-suburb{
+
+.churchdirectory-suburb {
     display: inline;
 }
+
 .churchdirectory-state {
     display: inline;
 }
-.churchdirectory-postcode{
+
+.churchdirectory-postcode {
     display: inline;
 }
-.churchdirectory-churchdirectoryinfo{
+
+.churchdirectory-churchdirectoryinfo {
 
 }
+
 .churchdirectory-contact {
     display: block;
     float: left;
@@ -203,23 +235,37 @@ p {
 .directory-familymembers-list {
     padding: 5px 0px 5px;
 }
+
 .vertical-line {
-/* display: inline; */
-float: left;
-border-width:1px;
-border-style: solid;
-border-color: #000;
-padding-bottom:2000px; margin-bottom:-2000px;
+    /* display: inline; */
+    float: left;
+    border-width: 1px;
+    border-style: solid;
+    border-color: #000;
+    padding-bottom: 2000px;
+    margin-bottom: -2000px;
 }
-div.vert-line{overflow:hidden}
-div.vert-line>div+div{border-left: black;}
-div.vert-line>div{float:left; padding-bottom:2000px; margin-bottom:-2000px;}
+
+div.vert-line {
+    overflow: hidden
+}
+
+div.vert-line>div+div {
+    border-left: black;
+}
+
+div.vert-line>div {
+    float: left;
+    padding-bottom: 2000px;
+    margin-bottom: -2000px;
+}
 
 #position-header {
     font-weight: bold;
     float: left;
     width: 20%;
 }
+
 #position-name {
     float: right;
     width: 70%;
@@ -234,16 +280,22 @@ div.vert-line>div{float:left; padding-bottom:2000px; margin-bottom:-2000px;}
 
 .paddingitem {
     padding: 5px;
+    margin: 0;
+}
+
+@media (min-width: 1200px) {
+    .row-fluid [class*="span"] {
+        margin-left: 0;
+    }
 }
 
 .churchdirectory-container {
     overflow: hidden;
 }
 
-.churchdirectory-container hr
-{
+.churchdirectory-container hr {
     margin: 0;
-    border-width:1px;
+    border-width: 1px;
     border-style: solid;
     border-color: #000;
 }
